# dev4

./: AudioGenerator.cpp  AudioGenerator.h  CMakeLists.txt  Constants.h  Delay.cpp  Envelope.cpp  Envelope.h  Filter.cpp  MainWindow.cpp  Oscillator.cpp  Oscillator.h  WaveType.h  main.cpp
include/: AudioGenerator.h  Constants.h  Delay.h  Envelope.h  Filter.h  MainWindow.h  Oscillator.h
projSynth/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/: AudioGenerator.cpp  Delay.cpp  Envelope.cpp  Filter.cpp  MainWindow.cpp  Oscillator.cpp  main.cpp
